--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/ampdever/CSE341Project1/issues"
   },
-  "homepage": "https://github.com/ampdever/CSE341Project1#readme"
+  "homepage": "https://github.com/ampdever/CSE341Project1#readme",
+  "dependencies": {
+    "express": "^4.19.2"
+  }
 }
